# llm-batch

./: .gitignore  main.py  pyproject.toml
src/openai_batch/: __init__.py  cli.py  utils.py
src/openai_batch/data/: config.yml
